--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travelgram | Perfil de viagens</title>
     <link rel="stylesheet" href="styles/index.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1>Título</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eius aspernatur consequuntur necessitatibus commodi impedit eveniet, sapiente ex eum possimus nihil nulla odit rem, in ea dolore? Atque, consequuntur? Ipsam?</p>
+
     
 </body>
 </html>
