--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +14,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="bg-surface-color">
+    <nav class="container">
+        <a href="#" id="logo">
+           <img src="assets/Logo.svg" alt="Logomarca">
+        </a>
+
+        <ul id="primary-menu">
+            <li>
+                <a href="#">
+                    <img src="assets/icones/MagnifyingGlass.svg" alt="ícone de lupa">
+                </a>
+            </li>
+            <li><a href="#">Explorer</a></i>
+            <li><a href="#">Minhas viagens</a></li>
+            <li><a href="#">
+                <img src="assets/Profile pic.png" alt="Imagem de Isabela Torres">
+            </a></li>
+        </ul>
+    </nav>
+    </div>
+    <header></header>
 
     
 </body>
