--- a/index.html
+++ b/index.html
@@ -88,6 +88,18 @@
 
         </main>
 
+        <footer class="container">
+            <span>
+                Travelgram &copy; 2025 
+            </span>
+            <span>
+                Termos de uso
+            </span>
+            <span>
+                Política de privacidade
+            </span>
+        </footer>
+
     </div>
     
 </body>
